--- a/style.css
+++ b/style.css
@@ -189,3 +189,17 @@ html{
   	-webkit-background-clip: text;
   	-webkit-text-fill-color: transparent;
 }
+.Gamebutton {
+
+	cursor:pointer;
+	color: #0099CC; /* Text color */
+	padding:10px 20px;
+	/*background-color: transparent;  Remove background color */
+	border: 2px solid #0099CC; /* Border thickness, line style, and color */
+	border-radius: 5px; /* Adds curve to border corners */
+	text-transform: uppercase; /* Make letters uppercase */
+	font-size: 20px;
+	background: -webkit-linear-gradient(#eee, #333);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
