--- a/style.css
+++ b/style.css
@@ -175,20 +175,7 @@ html{
   	
 }
 
-.button {
-	
-  	cursor:pointer;
-	color: #0099CC; /* Text color */
-	padding:10px 30px;
-	/*background-color: transparent;  Remove background color */
-	border: 2px solid #0099CC; /* Border thickness, line style, and color */
-	border-radius: 5px; /* Adds curve to border corners */
-	text-transform: uppercase; /* Make letters uppercase */
-	font-size: 25px;
-	background: -webkit-linear-gradient(#eee, #333);
-  	-webkit-background-clip: text;
-  	-webkit-text-fill-color: transparent;
-}
+
 .Gamebutton {
 
 	cursor:pointer;
@@ -203,3 +190,61 @@ html{
 	-webkit-background-clip: text;
 	-webkit-text-fill-color: transparent;
 }
+
+.button {
+
+	cursor:pointer;
+	color: #0099CC; /* Text color */
+	padding:10px 20px;
+	/*background-color: transparent;  Remove background color */
+	border: 2px solid #0099CC; /* Border thickness, line style, and color */
+	border-radius: 5px; /* Adds curve to border corners */
+	text-transform: uppercase; /* Make letters uppercase */
+	font-size: 20px;
+	background: -webkit-linear-gradient(#eee, #333);
+	-webkit-background-clip: text;
+	-webkit-text-fill-color: transparent;
+}
+
+/*
+.button {
+	display: inline-block;
+	border-radius: 4px;
+	background-color: #f4511e;
+	border: none;
+	color: #FFFFFF;
+	text-align: center;
+	font-size: 28px;
+	padding: 20px;
+	width: 200px;
+	transition: all 0.5s;
+	cursor: pointer;
+	margin: 15px;
+}
+
+.button span {
+	cursor: pointer;
+	display: inline-block;
+	position: relative;
+	transition: 0.5s;
+}
+
+.button span:after {
+	content: '\00bb';
+	position: absolute;
+	opacity: 0;
+	top: 0;
+	right: -20px;
+	transition: 0.5s;
+}
+
+.button:hover span {
+	padding-right: 25px;
+}
+
+.button:hover span:after {
+	opacity: 1;
+	right: 0;
+}
+
+ */
